@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.snapgames</groupId>
     <artifactId>cubewar</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.5-SNAPSHOT</version>
     <name>CubeWar</name>
     <description>A smart a simple java project</description>
     <inceptionYear>2023</inceptionYear>
@@ -60,14 +60,16 @@
     </distributionManagement>
 
     <properties>
-        <project.mainClass>com.snapgames.demo.CubeWar</project.mainClass>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+        <maven.plugin.validation>VERBOSE</maven.plugin.validation>
+        <argLine>-Xmx2048m</argLine>
         <project.scm.id>github</project.scm.id>
         <cucumber.version>7.6.0</cucumber.version>
         <junit.version>5.9.0</junit.version>
         <junit-platform.version>1.9.0</junit-platform.version>
+        <project.mainClass>com.snapgames.demo.CubeWar</project.mainClass>
     </properties>
 
     <!-- Project Dependencies -->
@@ -118,11 +120,7 @@
                 <version>3.10.1</version>
                 <configuration>
                     <release>${maven.compiler.source}</release>
-                    <enablePreview>true</enablePreview>
-                    <source>18</source>
-                    <target>18</target>
                     <encoding>UTF-8</encoding>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
@@ -140,19 +138,47 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.7</version>
+                <version>0.8.10</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
+                        <configuration>
+                            <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+                            <propertyName>surefireArgLine</propertyName>
+                        </configuration>
                     </execution>
                     <execution>
                         <id>report</id>
-                        <phase>test</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
+                        <configuration>
+                            <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+                            <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>jacoco-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>PACKAGE</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>LINE</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.50</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -363,7 +389,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.7</version>
+                <version>0.8.10</version>
                 <reportSets>
                     <reportSet>
                         <reports>
@@ -464,7 +490,7 @@
                                 <phase>site</phase>
                                 <configuration>
                                     <executable>pandoc</executable>
-                                    <workingDirectory />
+                                    <workingDirectory/>
                                     <arguments>
                                         <argument>docs/epub-metadata.yml</argument>
                                         <argument>docs/00-index.md</argument>
@@ -503,7 +529,7 @@
                                 <phase>package</phase>
                                 <configuration>
                                     <executable>pandoc</executable>
-                                    <workingDirectory />
+                                    <workingDirectory/>
                                     <arguments>
                                         <argument>docs/epub-metadata.yml</argument>
                                         <argument>docs/00-index.md</argument>
@@ -553,7 +579,8 @@
                                 <configuration>
                                     <headerType>gui</headerType>
                                     <jar>
-                                        ${project.build.directory}/${project.name}-${project.version}-shaded.jar</jar>
+                                        ${project.build.directory}/${project.name}-${project.version}-shaded.jar
+                                    </jar>
                                     <outfile>${project.build.directory}/${project.name}.exe</outfile>
                                     <downloadUrl>http://java.com/download</downloadUrl>
                                     <classPath>
